[gd_scene load_steps=7 format=3 uid="uid://b28gjkefgi5bs"]

[ext_resource type="Script" path="res://Main/Scripts/main.gd" id="1_6pthk"]
[ext_resource type="Script" path="res://Main/Scripts/SpritesContainer.gd" id="2_lv028"]
[ext_resource type="PackedScene" uid="uid://ngta1o5yiqxs" path="res://UI/control.tscn" id="2_micm1"]
[ext_resource type="Theme" uid="uid://82j1nkdbnloq" path="res://Themes/GUITheme.tres" id="3_sn3kp"]
[ext_resource type="Script" path="res://Main/Scripts/AudioStreamPlayer.gd" id="5_swrrk"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_b50ir"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6pthk")

[node name="BackgroundInputCapture" type="BackgroundInputCapture" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
vrs_mode = 2
canvas_item_default_texture_filter = 2
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Node2D" type="Node2D" parent="SubViewportContainer/SubViewport"]
position = Vector2(640, 360)

[node name="Camera2D" type="Camera2D" parent="SubViewportContainer/SubViewport/Node2D"]
unique_name_in_owner = true

[node name="Origin" type="Node2D" parent="SubViewportContainer/SubViewport/Node2D"]

[node name="SpritesContainer" type="Node2D" parent="SubViewportContainer/SubViewport/Node2D/Origin"]
unique_name_in_owner = true
script = ExtResource("2_lv028")

[node name="Control" parent="." instance=ExtResource("2_micm1")]
layout_mode = 1
offset_right = 0.0

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(338, 100)
theme = ExtResource("3_sn3kp")
dialog_text = " Do you want to make a PNGTuber model?"
dialog_autowrap = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open File(s)"
initial_position = 2
size = Vector2i(800, 500)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.png", "*.jpeg", "*.jpg", "*.svg")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_b50ir")
autoplay = true
bus = &"Mic"
script = ExtResource("5_swrrk")

[connection signal="bg_key_pressed" from="BackgroundInputCapture" to="." method="_on_background_input_capture_bg_key_pressed"]
[connection signal="mouse_entered" from="SubViewportContainer" to="." method="_on_sub_viewport_container_mouse_entered"]
[connection signal="mouse_exited" from="SubViewportContainer" to="." method="_on_sub_viewport_container_mouse_exited"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_file_dialog_files_selected"]
